<resources>
    <string name="app_name">作業8:何韋辰</string>
    <string name="txt_date">日期:</string>
    <string name="txt_item">項目:</string>
    <string name="txt_money">金額:</string>
    <string name="enter">輸入</string>
    <string name="recode">記錄</string>

    <string-array name="timeList">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

</resources>
