<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.hw8.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/TimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/txt_item"
        app:layout_constraintBaseline_toBaselineOf="@+id/TimeSpinner"
        app:layout_constraintEnd_toStartOf="@+id/TimeSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/txt_date"
        app:layout_constraintEnd_toStartOf="@+id/EdtDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeSpinner" />

    <Spinner
        android:id="@+id/TimeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="16dp"
        android:entries="@array/timeList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TimeTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:layout_marginTop="37dp"
        android:datePickerMode="spinner"
        android:hapticFeedbackEnabled="true"
        android:headerBackground="@color/colorAccent"
        android:headerMonthTextAppearance="@android:style/TextAppearance.WindowTitle"
        android:scrollbars="none"
        android:startYear="2018"
        app:layout_constrainedHeight="false"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/EdtDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/datePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/TimeSpinner" />

    <Button
        android:id="@+id/BtnEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="26dp"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BtnRecord"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BtnRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/recode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BtnEnter"
        app:layout_constraintTop_toBottomOf="@+id/EdtMoney" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="24dp"
        android:text="@string/txt_money"
        app:layout_constraintBottom_toTopOf="@+id/BtnEnter"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EdtMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

</android.support.constraint.ConstraintLayout>
